--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,10 @@
 ngcp-vmnotify (2.2.0) unstable; urgency=low
+
   [ Jon Bonilla ]
   * Align debian version with package version in svn repo
   * Set shell to bash instead of sh
+
+ -- Jon Bonilla <jbonilla@sipwise.com>  Tue, 05 Jul 2011 12:03:01 +0200
 
 ngcp-vmnotify (0.2.0) unstable; urgency=low
 
