MT#4683 Bump version to 1.3.1 for 3.0 backport

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ngcp-vmnotify (2.3.1) unstable; urgency=low
+
+  * [6c34f51] MT#4683 Fix params to sipsak.
+
+ -- Andreas Granig <agranig@sipwise.com>  Mon, 28 Oct 2013 12:37:45 +0100
+
 ngcp-vmnotify (2.3.0) unstable; urgency=low
 
   [ Michael Prokop ]
