MT#5847 Fixup debian/changelog version to Sipwise style

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ngcp-vmnotify (2.3.1+0~mr3.3) unstable; urgency=low
+ngcp-vmnotify (2.4.0.0+0~mr3.3.0.0) unstable; urgency=low
 
   * New release.
 
- -- Sipwise Jenkins Builder <jenkins@sipwise.com>  Sat, 01 Feb 2014 20:02:32 +0100
+ -- Alexander Lutay <alutay@sipwise.com>  Fri, 21 Mar 2014 15:47:19 +0100
 
 ngcp-vmnotify (2.3.1) unstable; urgency=low
 
