--- a/debian/changelog
+++ b/debian/changelog
@@ -1,22 +1,12 @@
-ngcp-vmnotify (12.0.3.0+0~mr12.0.3.0) unstable; urgency=medium
-
-  * New release.
-
- -- Sipwise Jenkins Builder <jenkins@sipwise.com>  Mon, 30 Oct 2023 17:07:04 +0100
-
-ngcp-vmnotify (12.0.2.0+0~mr12.0.2.0) unstable; urgency=medium
-
-  [ Guillem Jover ]
-  * [2018c4b] MT#58356 Update packaging for bookworm
-
- -- Sipwise Jenkins Builder <jenkins@sipwise.com>  Sun, 15 Oct 2023 08:26:42 +0200
-
-ngcp-vmnotify (12.0.1.0+0~mr12.0.1.0) unstable; urgency=medium
+ngcp-vmnotify (12.0.0.0+0~mr12.0.0.0) unstable; urgency=medium
 
   [ Fabricio Santolin da Silva ]
   * [7927eb2] MT#57141 Add actions to send with MWI notification
 
- -- Sipwise Jenkins Builder <jenkins@sipwise.com>  Wed, 30 Aug 2023 18:07:00 +0200
+  [ Guillem Jover ]
+  * [2018c4b] MT#58356 Update packaging for bookworm
+
+ -- Mykola Malkov <mmalkov@sipwise.com>  Tue, 07 Nov 2023 16:27:49 +0200
 
 ngcp-vmnotify (11.5.0.0+0~mr11.5.0.0) unstable; urgency=medium
 
